--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "^13.2.4",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "markdown-to-txt": "^2.0.1",
     "next": "^13.2.4",
     "next-auth": "^4.23.0",
     "prismjs": "^1.29.0",
